--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@tanstack/react-query": "^5.89.0",
+    "@types/react-window": "^1.8.8",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
@@ -25,6 +26,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.9.1",
     "react-spring": "^10.0.1",
+    "react-window": "^2.1.1",
+    "react-window-infinite-loader": "^2.0.0",
     "recharts": "^3.2.1",
     "styled-components": "^6.1.19",
     "zustand": "^5.0.8"
